Fix SonarCloud issues